src/test/deca/context/valid/wobj/test_oparith_int_mult.deca
// Description:
//    affectation et operation reussis
//
// Resultats:
//    a = 82
//
// Historique:
//    cree le 01/01/2024

{
   int a = 41 * 2 ;
}
