src/test/deca/context/invalid/obj/declclass/test_two_same_class.deca
// Description:
//    Create a class that is already defined
//
// Resultats:
//   Classe déjà définie
// 
// Historique:
//    cree le 01/01/2024

class A{
}
class A{
}
